--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -6,6 +6,18 @@
   --font-mono: "Fira Code"
 }
 
+::-webkit-scrollbar{
+  width: 8px;
+  background: #fff5f3;
+}
+::-webkit-scrollbar-track{
+  box-shadow: inset 0 0 2px rgba(5, 41, 70, .3);
+}
+::-webkit-scrollbar-thumb{
+  background-color: #888;
+  border-radius: 2px;
+}
+
 // typography
 html {
   scroll-behavior: smooth;
@@ -20,8 +32,36 @@ html {
   }
 }
 
+.main-container{
+  width: 100%;
+  margin: 0 auto;
+}
+
+aside{
+  position: fixed;
+  width: 17.5%;
+  padding: 0 10px 20px 10px;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y:auto;
+  // darkmode
+  color: var(--dark);
+  background-color: var(--light);
+}
+aside nav ul{
+}
+
+aside::-webkit-scrollbar{
+  width: 4px;
+  background: #fff5f3;
+}
+
+aside nav{
+  z-index: 10;
+}
+
 .singlePage {
-  padding: 4em 30vw;
+  padding: 1em 20vw;
   @media all and (max-width: 1200px) {
     padding: 25px 5vw;
   }
@@ -618,4 +658,5 @@ header {
     padding: 0 1em;
   }
 }
+
 
