--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="{{ .Lang }}">
 {{ partial "head.html" . }}
-
 <body>
 {{partial "search.html" .}}
+<main class="main-container">
+    <aside class="book-menu">
+        {{ partial "menu" . }}
+    </aside>
 <div class="singlePage">
     <!-- Begin actual content -->
     {{partial "header.html" .}}
@@ -26,5 +29,6 @@
     </article>
     {{partial "contact.html" .}}
 </div>
+</main>
 </body>
 </html>
