--- a/layouts/partials/footerIndex.html
+++ b/layouts/partials/footerIndex.html
@@ -8,11 +8,10 @@
 
       </div>
   {{else}}
-      <hr/>
       <div class="page-end" id="footer">
-        <!-- <div class="backlinks-container">
+        <div class="backlinks-container">
             {{partial "backlinks.html" .}}
-        </div> -->
+        </div>
         <div>
             {{partial "graph.html" .}}
         </div>
