nested nav debugging

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -60,6 +60,9 @@ aside nav{
   z-index: 10;
 }
 
+.book-section-flat{
+}
+
 .singlePage {
   padding: 1em 20vw;
   @media all and (max-width: 1200px) {
