--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -16,6 +16,7 @@
         <p>{{.}}</p>
         {{end}}
         {{partial "page-list.html" .Sections }}
+        {{/*  {{partial "page-list.html" .Paginator.Pages }}  */}}
         {{partial "page-list.html" .Paginator.Pages.ByLastmod.Reverse }}
         {{ template "_internal/pagination.html" .}}
     </article>
