--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -1,8 +1,10 @@
 // Add your own CSS here!
 
 :root {
-  --light: #faf8f8;
-  --dark: #141021;
+  // --light: #faf8f8;
+  // --dark: #141021;
+  --light: rgb(232, 230, 227)
+  --dark: rgb(13, 14, 14);
   --secondary: #284b63;
   --tertiary: #84a59d;
   --visited: #afbfc9;
@@ -23,7 +25,44 @@
   --gray: #d4d4d4 !important;
   --lightgray: #292633 !important;
   --outlinegray: #343434 !important;
+  // my
+  --light:#111 !important;
+  --dark: #fff !important;
 }
 
+::-webkit-scrollbar{
+  width: 8px;
+  background: #fff5f3;
+}
+::-webkit-scrollbar-track{
+  box-shadow: inset 0 0 2px rgba(5, 41, 70, .3);
+}
+::-webkit-scrollbar-thumb{
+  background-color: #888;
+  border-radius: 2px;
+}
 
+.main-container{
+  width: 100%;
+  margin: 0 auto;
+}
 
+aside{
+  width: 15%;
+  height: 100vh;
+  padding: 0 10px 20px 10px;
+  position: fixed;
+  overflow-y:auto;
+  overflow-x: hidden;
+  color: var(--dark);
+  background-color: var(--light);
+}
+
+aside::-webkit-scrollbar{
+  width: 2px;
+  background: #fff5f3;
+}
+
+.book-section-flat{
+  color: red;
+}
