--- a/layouts/partials/menu-filetree.html
+++ b/layouts/partials/menu-filetree.html
@@ -1,47 +1,39 @@
-{{ $bookSection := default "/" .Site.Params.BookSection  }}
-{{ if eq $bookSection "*" }}
-  {{ $bookSection = "/" }}{{/* Backward compatibility */}}
+{{ $section := default "/" .Site.Params.BookSection  }}
+{{ if eq $section "*" }}
+  {{ $section = "/" }}{{/* Backward compatibility */}}
 {{ end }}
 
-{{ with .Site.GetPage $bookSection }}
-  {{ template "book-section-children" (dict "Section" . "CurrentPage" $) }}
+{{ with .Site.GetPage $section }}
+  {{ template "folder-children" (dict "Section" . "CurrentPage" $) }}
 {{ end }}
 
-{{ define "book-section-children" }}{{/* (dict "Section" .Section "CurrentPage" .CurrentPage) */}}
+{{ define "folder-children" }}{{/* (dict "Section" .Section "CurrentPage" .CurrentPage) */}}
   <ul>
-    {{ range (where .Section.Pages "Params.bookhidden" "ne" true) }}
+    {{ range (where .Section.Pages "Params.hidden" "ne" true) }}
       {{ if .IsSection }}
         <li class="folder">
-          {{ template "book-page-link" (dict "Page" . "CurrentPage" $.CurrentPage) }}
-          {{ template "book-section-children" (dict "Section" . "CurrentPage" $.CurrentPage) }}
+          <div class="wrapper">
+            <div class="a-wrapper">
+              <div class="arrow"></div>
+            </div>
+            <a href="{{ .Page.RelPermalink }}" class="title">
+              {{- partial "title" .Page -}}
+            </a>
+          </div>
+          {{ template "folder-children" (dict "Section" . "CurrentPage" $.CurrentPage) }}
         </li>
       {{ else if and .IsPage }}
         <li>
-          {{ template "book-page-link" (dict "Page" . "CurrentPage" $.CurrentPage) }}
+          {{ template "children-link" (dict "Page" . "CurrentPage" $.CurrentPage) }}
         </li>
       {{ end }}
     {{ end }}
   </ul>
 {{ end }}
 
-{{ define "book-page-link" }}{{/* (dict "Page" .Page "CurrentPage" .CurrentPage) */}}
+{{ define "children-link" }}{{/* (dict "Page" .Page "CurrentPage" .CurrentPage) */}}
   {{ $current := eq .CurrentPage .Page }}
-  {{ $ancestor := .Page.IsAncestor .CurrentPage }}
-
-  {{ if .Page.Params.BookCollapseSection }}
-    <input type="checkbox" id="section-{{ md5 .Page }}" class="toggle" {{ if or $current $ancestor }}checked{{ end }} />
-    <label for="section-{{ md5 .Page }}" class="flex justify-between">
-      <a {{ if .Page.Content }}href="{{ .Page.RelPermalink }}"{{ else }}role="button"{{ end }} class="{{ if $current }}active{{ end }}">
-        {{- partial "title" .Page -}}
-      </a>
-    </label>
-  {{ else if .Page.Params.BookHref }}
-    <a href="{{ .Page.Params.BookHref }}" class="{{ if $current }}active{{ end }}" target="_blank" rel="noopener">
+    <a href="{{ .Page.RelPermalink }}">
       {{- partial "title" .Page -}}
     </a>
-  {{ else  }}
-    <a href="{{ .Page.RelPermalink }}" class="{{ if $current }}active{{ end }}">
-      {{- partial "title" .Page -}}
-    </a>
-  {{ end }}
 {{ end }}
