--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -16,7 +16,7 @@
         <p>{{.}}</p>
         {{end}}
         {{partial "textprocessing.html" . }}
-        {{/*  {{partial "page-list.html" .Sections }}  */}}
+        {{partial "page-list.html" .Sections }}
         {{partial "page-list.html" .Paginator.Pages.ByLastmod.Reverse }}
         {{ template "_internal/pagination.html" .}}
     </article>
@@ -24,4 +24,6 @@
 </div>
 </main>
 </body>
+{{ $js := resources.Get "js/menu.js" }}
+<script src="{{ $js.Permalink }}"></script>
 </html>
