99% of nav menu

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,4 +7,5 @@
 {{ block "main" . }}
 {{ end }}
 </body>
+{{/*  <script type="text/javascript" src="https://unpkg.com/default-passive-events"></script>  */}}
 </html>
