--- a/layouts/_default/term.html
+++ b/layouts/_default/term.html
@@ -4,8 +4,8 @@
 
 <body>
 {{partial "search.html" .}}
-<main class="main-container">
-    <aside class="book-menu">
+<main class="main-container"><div class="blur-element"></div>
+    <aside class="main-aside disabled">
         {{ partial "menu" . }}
     </aside>
 <div class="singlePage">
@@ -25,4 +25,5 @@
 </body>
 {{ $js := resources.Get "js/menu.js" }}
 <script src="{{ $js.Permalink }}"></script>
+{{/*  <script type="text/javascript" src="https://unpkg.com/default-passive-events"></script>  */}}
 </html>
