I think its end of nav styling :D

--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,6 +1,6 @@
 <nav>
 {{/*  {{ partial "menu-hugo" .Site.Menus.before }}  */}}
-
+<div class="close-nav-mobile"></div>
 {{ partial "menu-filetree" . }}
 
 {{/*  {{ partial "menu-hugo" .Site.Menus.after }}  */}}
