--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -97,13 +97,16 @@ aside::-webkit-scrollbar{
     list-style: none;
     padding-left: 5%;
   }
+  .close-nav-mobile{
+    display: none;
+  }
   
   @media all and (max-width: 1200px) {
     min-width: 250px;
+    z-index: 7;
     border-right:0px;
     width: max-content;
     max-width: 35%;
-    z-index: 5;
     padding-top: 0;
     height: 100vh;
     &.disabled{
@@ -114,12 +117,28 @@ aside::-webkit-scrollbar{
   }
 
   @media all and (max-width: 450px) {
-    width: 98%;
+    width: 100%;
     max-width: 100%;
     box-shadow: 0px 0px 0px;
     &.disabled{
       left:-100%
     }
+    .close-nav-mobile{
+      display: block;
+      &:after {
+        color: var(--dark);
+        position: absolute;
+        top: 2%;
+        right: 5%;
+        font-size: 1.75em; 
+        content: '\d7';
+        line-height: normal;
+        text-align: center;
+      }
+    &:hover{
+      cursor: pointer;
+    }
+  } 
   }
 }
 
@@ -155,26 +174,31 @@ aside::-webkit-scrollbar{
         &:hover{
           cursor: pointer;
         }
-        div:nth-of-type(1){
-           transform: rotate(45deg);
-            transform-origin: top left;
-        }
-        div:nth-of-type(2){
-          transform: scale(0);
-          opacity: 0;
-        }
-        div:nth-of-type(3){
-          transform: rotate(-45deg);
-          transform-origin: bottom left;
-        }
-        &.disabled{
-          div{
-            transform: none;
-            opacity: 1;
-            }
-        }
+        // div:nth-of-type(1){
+        //    transform: rotate(45deg);
+        //     transform-origin: top left;
+        // }
+        // div:nth-of-type(2){
+        //   transform: scale(0);
+        //   opacity: 0;
+        // }
+        // div:nth-of-type(3){
+        //   transform: rotate(-45deg);
+        //   transform-origin: bottom left;
+        // }
+        // &.disabled{
+        //   div{
+        //     transform: none;
+        //     opacity: 1;
+        //     }
+        // }
+        // @media all and (max-width: 450px) {
+        //   div{
+        //     transform: none !important;
+        //     opacity:1 !important;
+        //   }
+        // } 
       }
-
     }
     #page-title{
       flex-basis: 0%;
