Argument from authority and cognitive bias

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -67,6 +67,9 @@ p, ul, text, a, tr, td, li, ol, ul {
   margin: revert;
   padding: revert;
 }
+// article>ul{
+//   margin-top: 0px;
+// }
 
 tbody, li, p {
   line-height: 1.5em;
