--- a/assets/styles/_callouts.scss
+++ b/assets/styles/_callouts.scss
@@ -3,8 +3,8 @@
   --callout-summary-accent: #7fd7ff;
   --callout-bug: #f50057;
   --callout-bug-accent: #ff7aa9;
-  --callout-danger: #ff1744;
-  --callout-danger-accent: #ff8aa1;
+  --callout-danger: #f58382;
+  --callout-danger-accent: #f1bfbf;
   --callout-example: #7c4dff;
   --callout-example-accent: #bda5ff;
   --callout-fail: #ff5252;
@@ -30,8 +30,8 @@
   --callout-summary-accent: #00587f !important;
   --callout-bug: #f50057 !important;
   --callout-bug-accent: #7a002b !important;
-  --callout-danger: #ff1744 !important;
-  --callout-danger-accent: #8b001a !important;
+  --callout-danger: #f58382 !important;
+  --callout-danger-accent: #c862608f !important;
   --callout-example: #7c4dff !important;
   --callout-example-accent: #2b00a6 !important;
   --callout-fail: #ff5252 !important;
