--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -86,6 +86,7 @@ aside::-webkit-scrollbar{
   padding-right: 1%;
   padding-bottom: 5em;
   height: 100vh;
+  max-height: -webkit-fill-available;
   position: fixed;
   overflow-y:auto;
   overflow-x: hidden;
