--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -84,8 +84,8 @@ aside::-webkit-scrollbar{
 .main-aside{
   width: 16%;
   padding-right: 1%;
-  padding-bottom: 5em;
-  height: 100vh;
+  padding-bottom: 1em;
+  height: 100%;
   max-height: -webkit-fill-available;
   position: fixed;
   overflow-y:auto;
@@ -110,7 +110,6 @@ aside::-webkit-scrollbar{
     width: max-content;
     max-width: 35%;
     padding-top: 0;
-    height: 100vh;
     border-right:0px;
     &.disabled{
       left:-60%
