--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -21,6 +21,7 @@
         {{ template "_internal/pagination.html" .}}
     </article>
     {{partial "contact.html" .}}
+    {{/*  {{partial "footer.html" .}}  */}}
 </div>
 </main>
 </body>
