Update: content links generation

--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -16,12 +16,12 @@
         <p>{{.}}</p>
         {{end}}
         {{partial "textprocessing.html" . }}
-        {{partial "page-list.html" .Sections }}
-        {{partial "page-list.html" .Paginator.Pages.ByLastmod.Reverse }}
+        {{/*  {{partial "page-list.html" .Sections }}  */}}
+        {{/*  {{partial "page-list.html" .Paginator.Pages.ByLastmod.Reverse }}  */}}
         {{ template "_internal/pagination.html" .}}
     </article>
-    {{partial "contact.html" .}}
-    {{/*  {{partial "footer.html" .}}  */}}
+    {{/*  {{partial "contact.html" .}}  */}}
+    {{partial "footer.html" .}}
 </div>
 </main>
 </body>
