Update: remove internal pagination

--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -18,7 +18,7 @@
         {{partial "textprocessing.html" . }}
         {{/*  {{partial "page-list.html" .Sections }}  */}}
         {{/*  {{partial "page-list.html" .Paginator.Pages.ByLastmod.Reverse }}  */}}
-        {{ template "_internal/pagination.html" .}}
+        {{/*  {{ template "_internal/pagination.html" .}}  */}}
     </article>
     {{/*  {{partial "contact.html" .}}  */}}
     {{partial "footer.html" .}}
