--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -25,7 +25,11 @@ html {
 
 .singlePage {
   padding: 1em 20vw;
-  @media all and (max-width: 1200px) {
+  @media all and (max-width: 1400px) {
+    padding-right: 5vw;
+    padding-left: 30vw;
+  }
+  @media all and (max-width: 1000px) {
     padding: 25px 5vw;
   }
 }
@@ -429,7 +433,7 @@ header {
     margin-left: auto;
     margin-right: auto;
 
-    @media all and (max-width: 1200px) {
+    @media all and (max-width: 1000px) {
       width: 90%;
     }
 
