--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -62,7 +62,7 @@ aside::-webkit-scrollbar{
 }
 
 
-@media all and (max-width: 1200px) {
+@media all and (max-width: 1000px) {
   .fixed-position{
     position: fixed;
   }
@@ -82,7 +82,7 @@ aside::-webkit-scrollbar{
 }
 
 .main-aside{
-  width: 16%;
+  width: 16vw;
   padding-right: 1%;
   padding-bottom: 1em;
   height: 100%;
@@ -92,32 +92,36 @@ aside::-webkit-scrollbar{
   overflow-x: hidden;
   color: var(--dark);
   background-color: var(--lightAlt);
-  transition: all 0.2s linear;
   border-right: 1px solid var(--secondaryAlt);
   left: 0;
-  
   ul{
     list-style: none;
-    padding-left: 5%;
+    padding-left: 20px;
   }
   .close-nav-mobile{
     display: none;
   }
   
-  @media all and (max-width: 1200px) {
+  @media all and (max-width: 1400px) {
+    width: 25vw;
+  }
+  
+  @media all and (max-width: 1000px) {
+    max-width: auto;
     min-width: 250px;
     z-index: 7;
     width: max-content;
     max-width: 35%;
     padding-top: 0;
     border-right:0px;
+    transition: all 0.2s linear;
     &.disabled{
       left:-60%
     }
     -webkit-box-shadow: var(--shadowColor);
     box-shadow: var(--shadowColor);
   }
-
+  
   @media all and (max-width: 450px) {
     width: 80%;
     max-width: 80%;
@@ -148,7 +152,7 @@ aside::-webkit-scrollbar{
    display: flex;
 }
 
-@media all and (max-width: 1200px) {
+@media all and (max-width: 1000px) {
   .main-header{
     display: flex;
     position: relative;
